--- a/release-notes.html
+++ b/release-notes.html
@@ -21,6 +21,9 @@
   .doc .colist>table code, .doc p code, .doc thead code { font-size: 0.8em; }
   .doc pre { font-size: 0.7rem; }
   .doc .colist { font-size: 0.75rem; }
+  /* Make links more visible: */
+  .doc a { text-decoration: underline; }
+  .doc a code { text-decoration: underline; color: #1565c0; }
   /* Tab header fonts aren't rendered good, adjusting the font weight: */
   .tablist > ul li { font-weight: 500; }
   /* `page-toclevels` greater than 4 are not supported by Antora UI, patching it: */
@@ -169,13 +172,13 @@
 <p>Update <code>commons-io:commons-io</code> to version <code>2.16.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/96">96</a>)</p>
 </li>
 <li>
-<p>Update <code>commons-logging:commons-logging</code> to version <code>1.3.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/90">90</a>)</p>
+<p>Update <code>commons-logging:commons-logging</code> to version <code>1.3.2</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/102">102</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.logging.log4j:log4j-bom</code> to version <code>2.23.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/88">88</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.logging:logging-parent</code> to version <code>10.5.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/72">72</a>)</p>
+<p>Update <code>org.apache.logging:logging-parent</code> to version `` (<a href="https://github.com/apache/logging-log4j-transform/pull/103">103</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.maven.plugins:maven-invoker-plugin</code> to version <code>3.6.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/94">94</a>)</p>
