Add website content generated from `2dc5b304e165f641a2f74657f35ed69f885a4d19`

--- a/release-notes.html
+++ b/release-notes.html
@@ -11,12 +11,13 @@
 <!-- `@asciidoctor/tabs` extension styles -->
 <link rel="stylesheet" href="./_/css/vendor/tabs.css">
 <style>
-  /* Default `h4` and `h5` are smaller than the normal text, fix header font sizing: */
+  /* Default `h4`, `h5`, and `h6` are smaller than the normal text, fix header font sizing: */
   .doc h1 { font-size: 1.9rem; }
   .doc h2 { font-size: 1.7rem; }
   .doc h3 { font-size: 1.5rem; font-weight: 400; }
   .doc h4 { font-size: 1.3rem; font-weight: 500; }
   .doc h5 { font-size: 1.1rem; font-weight: 500; text-decoration: underline; }
+  .doc h6 { font-size: 0.9rem; font-weight: 500; text-decoration: underline; }
   /* Default `code`, `pre`, and `.colist` (source code annotations) fonts are too big, adjust them: */
   .doc .colist>table code, .doc p code, .doc thead code { font-size: 0.8em; }
   .doc pre { font-size: 0.7rem; }
@@ -145,9 +146,6 @@
 <li>
 <p>Update <code>org.apache.commons:commons-lang3</code> to version <code>3.14.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/69">69</a>)</p>
 </li>
-<li>
-<p>Update <code>org.apache.maven:maven-core</code> to version <code>3.9.6</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/65">65</a>)</p>
-</li>
 </ul>
 </div>
 </div>
@@ -166,7 +164,7 @@
 <div class="ulist">
 <ul>
 <li>
-<p>Update <code>apache/logging-parent</code> to version `` (<a href="https://github.com/apache/logging-log4j-transform/pull/80">80</a>)</p>
+<p>Update <code>apache/logging-parent</code> to version `` (<a href="https://github.com/apache/logging-log4j-transform/pull/104">104</a>)</p>
 </li>
 <li>
 <p>Update <code>commons-io:commons-io</code> to version <code>2.16.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/96">96</a>)</p>
@@ -181,13 +179,16 @@
 <p>Update <code>org.apache.logging:logging-parent</code> to version `` (<a href="https://github.com/apache/logging-log4j-transform/pull/103">103</a>)</p>
 </li>
 <li>
+<p>Update <code>org.apache.maven:maven-core</code> to version <code>3.9.7</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/105">105</a>)</p>
+</li>
+<li>
 <p>Update <code>org.apache.maven.plugins:maven-invoker-plugin</code> to version <code>3.6.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/94">94</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.maven.plugins:maven-shade-plugin</code> to version <code>3.5.3</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/101">101</a>)</p>
 </li>
 <li>
-<p>Update <code>org.assertj:assertj-core</code> to version <code>3.25.3</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/83">83</a>)</p>
+<p>Update <code>org.assertj:assertj-core</code> to version <code>3.26.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/106">106</a>)</p>
 </li>
 <li>
 <p>Update <code>org.codehaus.plexus:plexus-utils</code> to version <code>4.0.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/98">98</a>)</p>
