--- a/release-notes.html
+++ b/release-notes.html
@@ -11,6 +11,9 @@
 <!-- `@asciidoctor/tabs` extension styles -->
 <link rel="stylesheet" href="./_/css/vendor/tabs.css">
 <style>
+  /* Swap colors of `IMPORTANT` and `WARNING` blocks */
+  .doc .admonitionblock.important .icon { background-color: #f70; }
+  .doc .admonitionblock.warning .icon { background-color: #e40046; }
   /* Default `h4`, `h5`, and `h6` are smaller than the normal text, fix header font sizing: */
   .doc h1 { font-size: 1.9rem; }
   .doc h2 { font-size: 1.7rem; }
@@ -179,13 +182,13 @@
 <p>Update <code>org.apache.logging:logging-parent</code> to version `` (<a href="https://github.com/apache/logging-log4j-transform/pull/103">103</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.maven:maven-core</code> to version <code>3.9.7</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/105">105</a>)</p>
+<p>Update <code>org.apache.maven:maven-core</code> to version <code>3.9.8</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/109">109</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.maven.plugins:maven-invoker-plugin</code> to version <code>3.6.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/94">94</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.maven.plugins:maven-shade-plugin</code> to version <code>3.5.3</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/101">101</a>)</p>
+<p>Update <code>org.apache.maven.plugins:maven-shade-plugin</code> to version <code>3.6.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/108">108</a>)</p>
 </li>
 <li>
 <p>Update <code>org.assertj:assertj-core</code> to version <code>3.26.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/106">106</a>)</p>
