--- a/release-notes.html
+++ b/release-notes.html
@@ -164,10 +164,10 @@
 <div class="ulist">
 <ul>
 <li>
-<p>Update <code>apache/logging-parent</code> to version `` (<a href="https://github.com/apache/logging-log4j-transform/pull/124">124</a>)</p>
+<p>Update <code>apache/logging-parent</code> to version `` (<a href="https://github.com/apache/logging-log4j-transform/pull/128">128</a>)</p>
 </li>
 <li>
-<p>Update <code>commons-io:commons-io</code> to version <code>2.16.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/96">96</a>)</p>
+<p>Update <code>commons-io:commons-io</code> to version <code>2.17.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/126">126</a>)</p>
 </li>
 <li>
 <p>Update <code>commons-logging:commons-logging</code> to version <code>1.3.4</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/119">119</a>)</p>
@@ -176,10 +176,10 @@
 <p>Update <code>org.apache.commons:commons-lang3</code> to version <code>3.17.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/122">122</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.logging.log4j:log4j-bom</code> to version <code>2.23.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/88">88</a>)</p>
+<p>Update <code>org.apache.logging.log4j:log4j-bom</code> to version <code>2.24.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/131">131</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.logging:logging-parent</code> to version `` (<a href="https://github.com/apache/logging-log4j-transform/pull/103">103</a>)</p>
+<p>Update <code>org.apache.logging:logging-parent</code> to version <code>11.3.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/127">127</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.maven:maven-core</code> to version <code>3.9.9</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/120">120</a>)</p>
@@ -194,16 +194,16 @@
 <p>Update <code>org.assertj:assertj-core</code> to version <code>3.26.3</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/112">112</a>)</p>
 </li>
 <li>
-<p>Update <code>org.codehaus.plexus:plexus-utils</code> to version <code>4.0.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/98">98</a>)</p>
+<p>Update <code>org.codehaus.plexus:plexus-utils</code> to version <code>4.0.2</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/129">129</a>)</p>
 </li>
 <li>
 <p>Update <code>org.jacoco:jacoco-maven-plugin</code> to version <code>0.8.12</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/95">95</a>)</p>
 </li>
 <li>
-<p>Update <code>org.junit:junit-bom</code> to version <code>5.11.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/118">118</a>)</p>
+<p>Update <code>org.junit:junit-bom</code> to version <code>5.11.2</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/132">132</a>)</p>
 </li>
 <li>
-<p>Update <code>org.ow2.asm:asm-bom</code> to version <code>9.7</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/89">89</a>)</p>
+<p>Update <code>org.ow2.asm:asm-bom</code> to version <code>9.7.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/133">133</a>)</p>
 </li>
 <li>
 <p>Update <code>org.slf4j:slf4j-api</code> to version <code>2.0.16</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/117">117</a>)</p>
