Add website content generated from `a9bc6b02a805a65d9385cb30137018ce5b1038e2`

--- a/development.html
+++ b/development.html
@@ -69,6 +69,9 @@
     <span class="nav-text">Components</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="cli.html">Log4j Transform CLI Tools</a>
+  </li>
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="log4j-transform-maven-plugin.html">Log4j Transform Maven Plugin</a>
   </li>
   <li class="nav-item" data-depth="2">
