--- a/log4j-transform-maven-plugin.html
+++ b/log4j-transform-maven-plugin.html
@@ -68,6 +68,9 @@
     <button class="nav-item-toggle"></button>
     <span class="nav-text">Components</span>
 <ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="cli.html">Log4j Transform CLI Tools</a>
+  </li>
   <li class="nav-item is-current-page" data-depth="2">
     <a class="nav-link" href="log4j-transform-maven-plugin.html">Log4j Transform Maven Plugin</a>
   </li>
@@ -358,7 +361,7 @@ public void helloLog() {
 <dl>
 <dt class="hdlist1">Full name</dt>
 <dd>
-<p><code>org.apache.logging.log4j:log4j-transform-maven-plugin:0.2.0-SNAPSHOT:process-classes</code></p>
+<p><code>org.apache.logging.log4j:log4j-transform-maven-plugin:0.3.0-SNAPSHOT:process-classes</code></p>
 </dd>
 <dt class="hdlist1">Description</dt>
 <dd>
@@ -469,7 +472,7 @@ It defaults to <code>0</code> and can be configured using the <code>lastModGranu
 <pre class="highlightjs highlight"><code class="language-xml hljs" data-lang="xml">&lt;plugin&gt;
   &lt;groupId&gt;org.apache.logging.log4j&lt;/groupId&gt;
   &lt;artifactId&gt;log4j-transform-maven-plugin&lt;/artifactId&gt;
-  &lt;version&gt;0.2.0-SNAPSHOT&lt;/version&gt;
+  &lt;version&gt;0.3.0-SNAPSHOT&lt;/version&gt;
   &lt;executions&gt;
     &lt;execution&gt;
       &lt;goals&gt;
