--- a/log4j-transform-maven-shade-plugin-extensions.html
+++ b/log4j-transform-maven-shade-plugin-extensions.html
@@ -69,6 +69,9 @@
     <span class="nav-text">Components</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="cli.html">Log4j Transform CLI Tools</a>
+  </li>
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="log4j-transform-maven-plugin.html">Log4j Transform Maven Plugin</a>
   </li>
   <li class="nav-item is-current-page" data-depth="2">
@@ -158,7 +161,7 @@ and was donated to the Apache Software Foundation by its author.</p>
     &lt;dependency&gt;
       &lt;groupId&gt;org.apache.logging.log4j&lt;/groupId&gt;
       &lt;artifactId&gt;log4j-transform-maven-shade-plugin-extensions&lt;/artifactId&gt;
-      &lt;version&gt;0.2.0-SNAPSHOT&lt;/version&gt;
+      &lt;version&gt;0.3.0-SNAPSHOT&lt;/version&gt;
     &lt;/dependency&gt;
   &lt;/dependencies&gt;
   &lt;executions&gt;
