--- a/release-notes.html
+++ b/release-notes.html
@@ -69,6 +69,9 @@
     <span class="nav-text">Components</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="cli.html">Log4j Transform CLI Tools</a>
+  </li>
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="log4j-transform-maven-plugin.html">Log4j Transform Maven Plugin</a>
   </li>
   <li class="nav-item" data-depth="2">
@@ -128,6 +131,9 @@
 <div class="ulist">
 <ul>
 <li>
+<p>Add <code>log4j-codegen</code> tool to generate custom loggers.</p>
+</li>
+<li>
 <p>Started generating CycloneDX SBOM with the recent update of <code>logging-parent</code> to version <code>10.2.0</code></p>
 </li>
 <li>
@@ -173,6 +179,9 @@
 <p>Update <code>commons-logging:commons-logging</code> to version <code>1.3.4</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/119">119</a>)</p>
 </li>
 <li>
+<p>Update <code>info.picocli:picocli</code> to version <code>4.7.6</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/135">135</a>)</p>
+</li>
+<li>
 <p>Update <code>org.apache.commons:commons-lang3</code> to version <code>3.17.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/122">122</a>)</p>
 </li>
 <li>
@@ -200,7 +209,7 @@
 <p>Update <code>org.jacoco:jacoco-maven-plugin</code> to version <code>0.8.12</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/95">95</a>)</p>
 </li>
 <li>
-<p>Update <code>org.junit:junit-bom</code> to version <code>5.11.2</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/132">132</a>)</p>
+<p>Update <code>org.junit:junit-bom</code> to version <code>5.11.3</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/137">137</a>)</p>
 </li>
 <li>
 <p>Update <code>org.ow2.asm:asm-bom</code> to version <code>9.7.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/133">133</a>)</p>
