--- a/release-notes.html
+++ b/release-notes.html
@@ -133,6 +133,39 @@
 <li>
 <p>Add <code>log4j-codegen</code> tool to generate custom loggers.</p>
 </li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="release-notes-0-x-x-updated"><a class="anchor" href="#release-notes-0-x-x-updated"></a>Updated</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Update <code>info.picocli:picocli</code> to version <code>4.7.6</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/135">135</a>)</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="release-notes-0-2-0"><a class="anchor" href="#release-notes-0-2-0"></a>0.2.0</h2>
+<div class="sectionbody">
+<div class="dlist">
+<dl>
+<dt class="hdlist1">Release date</dt>
+<dd>
+<p>2024-10-27</p>
+</dd>
+</dl>
+</div>
+<div class="paragraph">
+<p>This is the second release of the project.</p>
+</div>
+<div class="sect2">
+<h3 id="release-notes-0-2-0-added"><a class="anchor" href="#release-notes-0-2-0-added"></a>Added</h3>
+<div class="ulist">
+<ul>
 <li>
 <p>Started generating CycloneDX SBOM with the recent update of <code>logging-parent</code> to version <code>10.2.0</code></p>
 </li>
@@ -143,7 +176,7 @@
 </div>
 </div>
 <div class="sect2">
-<h3 id="release-notes-0-x-x-changed"><a class="anchor" href="#release-notes-0-x-x-changed"></a>Changed</h3>
+<h3 id="release-notes-0-2-0-changed"><a class="anchor" href="#release-notes-0-2-0-changed"></a>Changed</h3>
 <div class="ulist">
 <ul>
 <li>
@@ -156,9 +189,12 @@
 </div>
 </div>
 <div class="sect2">
-<h3 id="release-notes-0-x-x-fixed"><a class="anchor" href="#release-notes-0-x-x-fixed"></a>Fixed</h3>
+<h3 id="release-notes-0-2-0-fixed"><a class="anchor" href="#release-notes-0-2-0-fixed"></a>Fixed</h3>
 <div class="ulist">
 <ul>
+<li>
+<p>Instead of throwing an exception, change the transformer to log an info or warn message when log4j-api is missing or is the wrong version. (<a href="https://github.com/apache/logging-log4j-transform/pull/134">134</a>)</p>
+</li>
 <li>
 <p>Fixed transformation of a single <code>Log4j2Plugins.dat</code> plugin. (<a href="https://github.com/apache/logging-log4j-transform/pull/87">87</a>)</p>
 </li>
@@ -166,7 +202,7 @@
 </div>
 </div>
 <div class="sect2">
-<h3 id="release-notes-0-x-x-updated"><a class="anchor" href="#release-notes-0-x-x-updated"></a>Updated</h3>
+<h3 id="release-notes-0-2-0-updated"><a class="anchor" href="#release-notes-0-2-0-updated"></a>Updated</h3>
 <div class="ulist">
 <ul>
 <li>
@@ -177,9 +213,6 @@
 </li>
 <li>
 <p>Update <code>commons-logging:commons-logging</code> to version <code>1.3.4</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/119">119</a>)</p>
-</li>
-<li>
-<p>Update <code>info.picocli:picocli</code> to version <code>4.7.6</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/135">135</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.commons:commons-lang3</code> to version <code>3.17.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/122">122</a>)</p>
