--- a/log4j-transform-maven-shade-plugin-extensions.html
+++ b/log4j-transform-maven-shade-plugin-extensions.html
@@ -129,7 +129,7 @@
 </div>
 </div>
 <div class="sect1">
-<h2 id="log4j-plugin-cache-transformer"><a class="anchor" href="#log4j-plugin-cache-transformer"></a>Log4j Plugin Cache Transformer</h2>
+<h2 id="log4j-plugin-cache-transformer"><a class="anchor" href="#log4j-plugin-cache-transformer"></a>Log4j Plugin Descriptor Transformer</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>A
