Add website content generated from `f4392b105ae223fa2e80be4dfb647868cc134fdd`

--- a/release-notes.html
+++ b/release-notes.html
@@ -75,6 +75,9 @@
     <a class="nav-link" href="log4j-transform-maven-plugin.html">Log4j Transform Maven Plugin</a>
   </li>
   <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="log4j-converter-config.html">Log4j Configuration Converter API</a>
+  </li>
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="log4j-transform-maven-shade-plugin-extensions.html">Maven Shade Plugin Extensions</a>
   </li>
 </ul>
@@ -133,6 +136,9 @@
 <li>
 <p>Add <code>log4j-codegen</code> tool to generate custom loggers.</p>
 </li>
+<li>
+<p>Add <code>log4j-codegen</code> tool to generate custom loggers.</p>
+</li>
 </ul>
 </div>
 </div>
@@ -141,7 +147,16 @@
 <div class="ulist">
 <ul>
 <li>
-<p>Update <code>info.picocli:picocli</code> to version <code>4.7.6</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/135">135</a>)</p>
+<p>Update <code>com.fasterxml.jackson.core:jackson-core</code> to version <code>2.18.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/141">141</a>)</p>
+</li>
+<li>
+<p>Update <code>commons-io:commons-io</code> to version <code>2.18.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/143">143</a>)</p>
+</li>
+<li>
+<p>Update <code>info.picocli:picocli</code> to version <code>4.7.6</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/140">140</a>)</p>
+</li>
+<li>
+<p>Update <code>org.apache.logging.log4j:log4j-bom</code> to version <code>2.24.2</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/144">144</a>)</p>
 </li>
 </ul>
 </div>
