--- a/log4j-transform-maven-plugin.html
+++ b/log4j-transform-maven-plugin.html
@@ -75,6 +75,9 @@
     <a class="nav-link" href="log4j-transform-maven-plugin.html">Log4j Transform Maven Plugin</a>
   </li>
   <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="log4j-converter-config.html">Log4j Configuration Converter API</a>
+  </li>
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="log4j-transform-maven-shade-plugin-extensions.html">Maven Shade Plugin Extensions</a>
   </li>
 </ul>
