Add website content generated from `e0ccc5326c7d4a94c7698a33d2347c6755e9e993`

--- a/log4j-converter-config.html
+++ b/log4j-converter-config.html
@@ -229,6 +229,18 @@ package.</p>
 </thead>
 <tbody>
 <tr>
+<th class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://logging.apache.org/log4j/1.x/apidocs/org/apache/log4j/PropertyConfigurator.html">Log4j 1 Properties</a></p></th>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>v1:properties</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">yes</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">no</p></td>
+</tr>
+<tr>
+<th class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://logging.apache.org/log4j/1.x/apidocs/org/apache/log4j/xml/DOMConfigurator.html">Log4j 1 XML</a></p></th>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>v1:xml</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">yes</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">no</p></td>
+</tr>
+<tr>
 <th class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://logging.apache.org/log4j/2.x/manual/configuration.html#xml">Log4j Core 2 XML</a></p></th>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>v2:xml</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">yes</p></td>
