Add website content generated from `0c9811100bb887f3feaec13ff10f24f6c7deec5c`

--- a/release-notes.html
+++ b/release-notes.html
@@ -134,10 +134,13 @@
 <div class="ulist">
 <ul>
 <li>
-<p>Add <code>log4j-codegen</code> tool to generate custom loggers.</p>
+<p>Adds a <a href="cli.html#log4j-codegen" class="xref page"><code>log4j-codegen</code> CLI tool</a> to generate custom loggers. (<a href="https://github.com/apache/logging-log4j-transform/pull/92">92</a>)</p>
 </li>
 <li>
-<p>Add <code>log4j-codegen</code> tool to generate custom loggers.</p>
+<p>Adds a <a href="log4j-converter-config.html" class="xref page">Configuration Converter API</a> to convert between various logging configuration files. (<a href="https://github.com/apache/logging-log4j-transform/pull/142">142</a>)</p>
+</li>
+<li>
+<p>Adds a <a href="cli.html#log4j-converter-plugin-descriptor" class="xref page"><code>log4j-converter-plugin-descriptor</code> CLI tool</a> to manipulate <a href="https://logging.apache.org/log4j/2.x/manual/plugins.html#plugin-registry">Log4j Plugin descriptors</a>. (<a href="https://github.com/apache/logging-log4j-transform/pull/139">139</a>)</p>
 </li>
 </ul>
 </div>
@@ -148,6 +151,9 @@
 <ul>
 <li>
 <p>Update <code>com.fasterxml.jackson.core:jackson-core</code> to version <code>2.18.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/141">141</a>)</p>
+</li>
+<li>
+<p>Update <code>com.fasterxml.jackson.core:jackson-databind</code> to version <code>2.18.2</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/146">146</a>)</p>
 </li>
 <li>
 <p>Update <code>commons-io:commons-io</code> to version <code>2.18.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/143">143</a>)</p>
