Add website content generated from `907c1eb84c20bd8ae95c1e47295171843aabcf1e`

--- a/release-notes.html
+++ b/release-notes.html
@@ -156,6 +156,9 @@
 <p>Update <code>com.fasterxml.jackson.core:jackson-databind</code> to version <code>2.18.2</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/146">146</a>)</p>
 </li>
 <li>
+<p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.18.2</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/147">147</a>)</p>
+</li>
+<li>
 <p>Update <code>commons-io:commons-io</code> to version <code>2.18.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/143">143</a>)</p>
 </li>
 <li>
