--- a/release-notes.html
+++ b/release-notes.html
@@ -142,6 +142,9 @@
 <li>
 <p>Adds a <a href="cli.html#log4j-converter-plugin-descriptor" class="xref page"><code>log4j-converter-plugin-descriptor</code> CLI tool</a> to manipulate <a href="https://logging.apache.org/log4j/2.x/manual/plugins.html#plugin-registry">Log4j Plugin descriptors</a>. (<a href="https://github.com/apache/logging-log4j-transform/pull/139">139</a>)</p>
 </li>
+<li>
+<p>Adds a <a href="cli.html#log4j-transform-cli" class="xref page"><code>log4j-transform-cli</code> tool</a> to access the functionalities of Log4j Transform from the command line. (<a href="https://github.com/apache/logging-log4j-transform/pull/142">142</a>)</p>
+</li>
 </ul>
 </div>
 </div>
@@ -165,7 +168,7 @@
 <p>Update <code>info.picocli:picocli</code> to version <code>4.7.6</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/140">140</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.logging.log4j:log4j-bom</code> to version <code>2.24.2</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/144">144</a>)</p>
+<p>Update <code>org.apache.logging.log4j:log4j-bom</code> to version <code>2.24.3</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/153">153</a>)</p>
 </li>
 </ul>
 </div>
