Add website content generated from `3abb6b294d250d2b0cb5b6944b7ed94b1ed0e891`

--- a/log4j-transform-maven-shade-plugin-extensions.html
+++ b/log4j-transform-maven-shade-plugin-extensions.html
@@ -146,6 +146,21 @@ that merges <code>Log4j2Plugins.dat</code> plugin caches from all the jars conta
 <a href="https://github.com/edwgiz/maven-shaded-log4j-transformer">edwgiz/maven-shaded-log4j-transformer</a>
 and was donated to the Apache Software Foundation by its author.</p>
 </div>
+<div class="admonitionblock tip">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-tip" title="Tip"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>If you are a Gradle user, you can use the
+<a href="https://gradleup.com/shadow/configuration/merging/#merging-log4j2-plugin-cache-files-log4j2plugins-dat">equivalent Shadow Gradle Plugin transformer</a>.</p>
+</div>
+</td>
+</tr>
+</table>
+</div>
 <div class="sect2">
 <h3 id="log4j-plugin-cache-transformer-usage"><a class="anchor" href="#log4j-plugin-cache-transformer-usage"></a>Usage</h3>
 <div class="paragraph">
