--- a/release-notes.html
+++ b/release-notes.html
@@ -150,16 +150,25 @@
 <div class="ulist">
 <ul>
 <li>
+<p>Update <code>apache/logging-parent/.github/workflows/build-reusable.yaml@rel/11.3.0</code> to version <code>12.0.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/167">167</a>)</p>
+</li>
+<li>
+<p>Update <code>apache/logging-parent/.github/workflows/deploy-site-reusable.yaml@rel/11.3.0</code> to version <code>12.0.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/171">171</a>)</p>
+</li>
+<li>
 <p>Update <code>com.fasterxml.jackson.core:jackson-core</code> to version <code>2.18.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/141">141</a>)</p>
 </li>
 <li>
 <p>Update <code>com.fasterxml.jackson.core:jackson-databind</code> to version <code>2.18.2</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/146">146</a>)</p>
 </li>
 <li>
-<p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.18.2</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/147">147</a>)</p>
+<p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.18.3</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/173">173</a>)</p>
 </li>
 <li>
 <p>Update <code>commons-io:commons-io</code> to version <code>2.18.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/143">143</a>)</p>
+</li>
+<li>
+<p>Update <code>commons-logging:commons-logging</code> to version <code>1.3.5</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/162">162</a>)</p>
 </li>
 <li>
 <p>Update <code>info.picocli:picocli</code> to version <code>4.7.6</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/140">140</a>)</p>
@@ -171,7 +180,10 @@
 <p>Update <code>org.assertj:assertj-core</code> to version <code>3.27.3</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/158">158</a>)</p>
 </li>
 <li>
-<p>Update <code>org.junit:junit-bom</code> to version <code>5.11.4</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/154">154</a>)</p>
+<p>Update <code>org.junit:junit-bom</code> to version <code>5.12.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/170">170</a>)</p>
+</li>
+<li>
+<p>Update <code>org.slf4j:slf4j-api</code> to version <code>2.0.17</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/172">172</a>)</p>
 </li>
 </ul>
 </div>
