--- a/release-notes.html
+++ b/release-notes.html
@@ -118,6 +118,27 @@
 <article class="doc">
 <h1 class="page">Release notes</h1>
 <div class="sect1">
+<h2 id="release-notes-0-x-x"><a class="anchor" href="#release-notes-0-x-x"></a>0.x.x</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>This is the second release of the project.</p>
+</div>
+<div class="sect2">
+<h3 id="release-notes-0-x-x-updated"><a class="anchor" href="#release-notes-0-x-x-updated"></a>Updated</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Update <code>apache/logging-parent/.github/workflows/build-reusable.yaml@rel/11.3.0</code> to version <code>12.0.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/167">167</a>)</p>
+</li>
+<li>
+<p>Update <code>apache/logging-parent/.github/workflows/deploy-site-reusable.yaml@rel/11.3.0</code> to version <code>12.0.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/171">171</a>)</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="release-notes-0-2-0"><a class="anchor" href="#release-notes-0-2-0"></a>0.2.0</h2>
 <div class="sectionbody">
 <div class="dlist">
