--- a/release-notes.html
+++ b/release-notes.html
@@ -153,6 +153,9 @@
 <p>Update <code>apache/logging-parent/.github/workflows/build-reusable.yaml@rel/11.3.0</code> to version <code>12.0.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/167">167</a>)</p>
 </li>
 <li>
+<p>Update <code>apache/logging-parent/.github/workflows/codeql-analysis-reusable.yaml@rel/11.3.0</code> to version <code>12.0.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/164">164</a>)</p>
+</li>
+<li>
 <p>Update <code>apache/logging-parent/.github/workflows/deploy-site-reusable.yaml@rel/11.3.0</code> to version <code>12.0.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/171">171</a>)</p>
 </li>
 <li>
