Add website content generated from `409760ce2bde1af858e7df2685009f1fac5589a5`

--- a/release-notes.html
+++ b/release-notes.html
@@ -156,34 +156,67 @@
 <p>Update <code>apache/logging-parent/.github/workflows/codeql-analysis-reusable.yaml@rel/11.3.0</code> to version <code>12.0.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/164">164</a>)</p>
 </li>
 <li>
+<p>Update <code>apache/logging-parent/.github/workflows/codeql-analysis-reusable.yaml@rel/12.0.0</code> to version <code>12.1.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/188">188</a>)</p>
+</li>
+<li>
+<p>Update <code>apache/logging-parent/.github/workflows/codeql-analysis-reusable.yaml@rel/12.1.0</code> to version <code>12.1.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/197">197</a>)</p>
+</li>
+<li>
+<p>Update <code>apache/logging-parent/.github/workflows/deploy-release-reusable.yaml@rel/12.0.0</code> to version <code>12.1.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/186">186</a>)</p>
+</li>
+<li>
+<p>Update <code>apache/logging-parent/.github/workflows/deploy-release-reusable.yaml@rel/12.1.0</code> to version <code>12.1.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/201">201</a>)</p>
+</li>
+<li>
 <p>Update <code>apache/logging-parent/.github/workflows/deploy-site-reusable.yaml@rel/11.3.0</code> to version <code>12.0.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/171">171</a>)</p>
+</li>
+<li>
+<p>Update <code>apache/logging-parent/.github/workflows/merge-dependabot-reusable.yaml@rel/12.0.0</code> to version <code>12.1.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/184">184</a>)</p>
+</li>
+<li>
+<p>Update <code>apache/logging-parent/.github/workflows/merge-dependabot-reusable.yaml@rel/12.1.0</code> to version <code>12.1.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/200">200</a>)</p>
 </li>
 <li>
 <p>Update <code>com.fasterxml.jackson.core:jackson-core</code> to version <code>2.18.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/141">141</a>)</p>
 </li>
 <li>
-<p>Update <code>com.fasterxml.jackson.core:jackson-databind</code> to version <code>2.18.3</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/174">174</a>)</p>
+<p>Update <code>com.fasterxml.jackson.core:jackson-databind</code> to version <code>2.19.2</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/209">209</a>)</p>
 </li>
 <li>
-<p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.18.3</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/173">173</a>)</p>
+<p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.19.2</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/208">208</a>)</p>
 </li>
 <li>
-<p>Update <code>commons-io:commons-io</code> to version <code>2.18.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/143">143</a>)</p>
+<p>Update <code>commons-cli:commons-cli</code> to version <code>1.10.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/215">215</a>)</p>
+</li>
+<li>
+<p>Update <code>commons-io:commons-io</code> to version <code>2.20.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/210">210</a>)</p>
 </li>
 <li>
 <p>Update <code>commons-logging:commons-logging</code> to version <code>1.3.5</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/162">162</a>)</p>
 </li>
 <li>
-<p>Update <code>info.picocli:picocli</code> to version <code>4.7.6</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/140">140</a>)</p>
+<p>Update <code>info.picocli:picocli</code> to version <code>4.7.7</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/189">189</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.logging.log4j:log4j-bom</code> to version <code>2.24.3</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/153">153</a>)</p>
+<p>Update <code>org.apache.commons:commons-lang3</code> to version <code>3.18.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/205">205</a>)</p>
 </li>
 <li>
-<p>Update <code>org.assertj:assertj-core</code> to version <code>3.27.3</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/158">158</a>)</p>
+<p>Update <code>org.apache.logging.log4j:log4j-bom</code> to version <code>2.25.1</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/206">206</a>)</p>
 </li>
 <li>
-<p>Update <code>org.junit:junit-bom</code> to version <code>5.12.0</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/170">170</a>)</p>
+<p>Update <code>org.apache.maven:maven-core</code> to version <code>3.9.11</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/207">207</a>)</p>
+</li>
+<li>
+<p>Update <code>org.assertj:assertj-core</code> to version <code>3.27.4</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/217">217</a>)</p>
+</li>
+<li>
+<p>Update <code>org.jacoco:jacoco-maven-plugin</code> to version <code>0.8.13</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/178">178</a>)</p>
+</li>
+<li>
+<p>Update <code>org.junit:junit-bom</code> to version <code>5.13.3</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/204">204</a>)</p>
+</li>
+<li>
+<p>Update <code>org.ow2.asm:asm-bom</code> to version <code>9.8</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/177">177</a>)</p>
 </li>
 <li>
 <p>Update <code>org.slf4j:slf4j-api</code> to version <code>2.0.17</code> (<a href="https://github.com/apache/logging-log4j-transform/pull/172">172</a>)</p>
